[gd_scene load_steps=7 format=3 uid="uid://vuacythkd73h"]

[ext_resource type="Script" path="res://interactive_object.gd" id="1_vyx32"]
[ext_resource type="Texture2D" uid="uid://cra0ofukn2fsl" path="res://sprite/object/interactiveobjects.png" id="2_mvrma"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uo5hk"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cy8ph"]
size = Vector2(120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nray"]
atlas = ExtResource("2_mvrma")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_hxxrr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nray")
}],
"loop": true,
"name": &"static",
"speed": 5.0
}]

[node name="InteractiveObject" type="StaticBody2D"]
script = ExtResource("1_vyx32")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_uo5hk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_cy8ph")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hxxrr")
animation = &"static"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
